[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "chaostoolkit-datadog"
dynamic = ["version"]
description = "Chaos Toolkit extension for DataDog"
authors = [
    {name = "Chaos Toolkit", email = "contact@chaostoolkit.org"},
    {name = "Sylvain Hellegouarch", email = "sh@defuze.org"},
]
dependencies = [
    "datadog-api-client>=2.24.0",
    "chaostoolkit-lib>=1.42.1",
    "arrow>=1.3.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Freely Distributable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://chaostoolkit.org/"
documentation = "https://chaostoolkit.org/drivers/datadog/"
repository = "https://github.com/chaostoolkit-incubator/chaostoolkit-datadog"
changelog = "https://github.com/chaostoolkit-incubator/chaostoolkit-datadog/blob/master/CHANGELOG.md"

[tool.pdm]
distribution = true
version = { source = "scm" }

[tool.pdm.dev-dependencies]
dev = [
    "requests-mock>=1.12.1",
    "coverage>=7.4.4",
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "pytest-sugar>=1.0.0",
    "ruff>=0.3.7",
]

[tool.pdm.scripts]
lint = {composite = ["ruff check chaosdatadog/"]}
format = {composite = ["ruff check --fix chaosdatadog/", "ruff format chaosdatadog/"]}
test = {cmd = "pytest"}

[tool.ruff]
line-length = 80
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "tests"
addopts = "-v -rxs --cov chaosdatadog --cov-report term-missing:skip-covered -p no:warnings"
